tests/errors/NoSource.java
import org.aspectj.testing.Tester;

class NoSource {
        public void String.foo() {}
}
